<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CotActivity">

    <item
        android:id="@+id/stop"
        android:icon="@drawable/stop"
        android:orderInCategory="1"
        android:title="@string/stop"
        android:iconTint="@android:color/holo_red_light"
        android:iconTintMode="src_atop"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/start"
        android:icon="@drawable/start"
        android:orderInCategory="1"
        android:title="@string/start"
        android:iconTint="@android:color/holo_green_light"
        android:iconTintMode="src_atop"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/info"
        android:orderInCategory="2"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>