<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/smallPadding"
            android:text="@string/transmissionProtocolSsl"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listPresetsSslRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            tools:itemCount="1"
            tools:listitem="@layout/preset_list_item" />

        <TextView
            android:id="@+id/sslNoneFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/noPresetsFound"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/smallPadding"
            android:text="@string/transmissionProtocolTcp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listPresetsTcpRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            tools:itemCount="2"
            tools:listitem="@layout/preset_list_item" />

        <TextView
            android:id="@+id/tcpNoneFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/noPresetsFound"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/smallPadding"
            android:text="@string/transmissionProtocolUdp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listPresetsUdpRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            tools:itemCount="2"
            tools:listitem="@layout/preset_list_item" />

        <TextView
            android:id="@+id/udpNoneFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/noPresetsFound"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/padding"
        android:text="@string/createNewPreset"
        android:textColor="@color/textColour"
        app:icon="@drawable/add"
        app:iconTint="@color/textColour" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
